--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appguiaauxilios",
+  "name": "app-guia-auxilios",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/drawer": "^7.7.10",
-    "@react-navigation/native": "^7.1.26",
-    "@react-navigation/stack": "^7.6.13",
-    "expo": "~54.0.31",
+    "@google/generative-ai": "^0.21.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/drawer": "^7.7.9",
+    "@react-navigation/native": "^7.1.25",
+    "@react-navigation/stack": "^7.6.12",
+    "expo": "~54.0.27",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
@@ -22,11 +22,12 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
-  "private": true,
   "devDependencies": {
-    "babel-preset-expo": "^54.0.9"
-  }
+    "@babel/core": "^7.25.2"
+  },
+  "private": true
 }
